finished css, responsive elements

--- a/index.html
+++ b/index.html
@@ -2,9 +2,62 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css.css">
+    <link rel="shortcut icon" href="/images/favicon.png">
     <title>Sloth Sanctum - Enjoying Life in the Slow Lane</title>
 </head>
 <body>
-    
+    <header>
+        <a href="index.html">
+            <div class="logo">
+                SLOTH<br>
+                SANCTUM
+            </div>
+        </a>
+        <nav>
+            <a href="#">HOME</a>
+            <a href="#">ABOUT</a>
+            <a href="#">CONTACT</a>
+        </nav>
+    </header>
+    <section class="banner">
+        <div class="slothText">
+            <h2>Sloths are Great!</h2>
+            <p>
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Error voluptatem non animi iure, ullam ex unde. Eius aspernatur provident nobis commodi corporis. Incidunt hic, esse rem perspiciatis voluptatibus iure nisi itaque soluta facilis dolorem temporibus fugiat, officiis ducimus sed error mollitia magnam debitis. Ex iusto eos quod magnam. Porro, repellat.     
+            </p>
+        </div>
+    </section>
+    <section class="meetSloths">
+        <h1>Come meet our friendly sloths!</h1>
+        <div class="sloths">
+            <div class="sloth1">
+                <div>
+                <span>Flash</span>
+                He is the most awesome guy at the sanctom. He used to work at the DMV, but he was too fast.
+                </div>
+            </div>
+        
+            <div class="sloth2">
+                <div>
+                    <span>Priscilla</span>
+                    She is an ex-runway model from Milan, Italy. She had to stop due to the mobs she was creating.
+                </div> 
+            </div>
+            <div class="sloth3">
+                <div>
+                        <span>Sid</span>
+                        He has been here since the ice age and is as grumpy as the day is long. But he loves children!
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <img src="images/logo.png" alt="">
+        <span>Copyright &copy; 2020</span>
+        <a href="tel:800-999-7777">Talk to a sloth today!</a>
+    </footer>
 </body>
 </html>
